Adding AI Assistant to help and Configuring Admin page